Fix issues with testing on the module path